Convert occurrences of new Integer(x) to Integer.valueOf(x) for efficiency.
git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/classlib/trunk@478613 13f79535-47bb-0310-9956-ffa450edef68